HDDS-3173. Provide better default JVM options